<resources>
    <string name="app_name">FoodCraft</string>

    <!--    Fragment Titles -->
    <string name="recipes_fragment_title">Recipes</string>
    <string name="favourite_recipes_fragment_title">Favourite Recipes</string>
    <string name="food_joke_fragment_title">Food Joke</string>

    <!--    Meal Types BottomSheet  -->
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>

    <!--    Diet Type BottomSheet   -->
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="low_fodmap">Low FODMAP</string>

    <!--    BottomSheet Apply Button-->
    <string name="apply">Apply</string>
    <string name="search">Search</string>

    <!--    Attributes for OverviewFragment-->
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>

    <!--   details_menu resources -->
    <string name="save_to_favourites">Save to Favourites</string>
    <string name="no_favourite_recipes">No Favourite Recipes</string>

    <!--    favourites_recipe_menu-->
    <string name="delete_favourite">Delete Favourite</string>
    <string name="delete_all">Delete All</string>

    <!--    FoodJokeFragment res-->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam cursus purus quis sagittis pharetra. Donec vitae pulvinar dolor. Nam scelerisque eget velit nec tristique. Pellentesque quis interdum massa. Nullam molestie vestibulum nisi, ac fringilla neque pulvinar sit amet</string>
    <string name="error">Error</string>
    <string name="share">Share</string>

    <!-- recipes_item res -->
    <string name="likes">Likes</string>
    <string name="cook_time">Cook Time</string>
</resources>