<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_overview_scene"
    tools:context=".ui.fragments.recipes.overview.OverviewFragment">

    <ImageView
        android:id="@+id/imageview_main"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/overlay_gradient"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/overlay_gradient"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_main"
        app:layout_constraintEnd_toEndOf="@id/imageview_main"
        app:layout_constraintStart_toStartOf="@+id/imageview_main"
        app:layout_constraintTop_toTopOf="@+id/imageview_main"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        style="?attr/textAppearanceLabelLarge"
        android:id="@+id/textview_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSurfaceInverse"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_main"
        app:layout_constraintEnd_toEndOf="@+id/overlay_gradient"
        tools:text="100" />

    <ImageView
        android:importantForAccessibility="no"
        app:tint="?attr/colorOnSurfaceInverse"
        android:id="@+id/imageview_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cook_time"
        app:layout_constraintBottom_toTopOf="@+id/textview_time"
        app:layout_constraintEnd_toEndOf="@+id/textview_time"
        app:layout_constraintStart_toStartOf="@+id/textview_time" />

    <TextView
        style="?attr/textAppearanceLabelLarge"
        android:id="@+id/textview_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSurfaceInverse"
        app:layout_constraintBottom_toBottomOf="@+id/textview_time"
        app:layout_constraintEnd_toStartOf="@+id/textview_time"
        tools:text="10" />


    <ImageView
        android:importantForAccessibility="no"
        android:id="@+id/imageview_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_likes"
        app:layout_constraintBottom_toTopOf="@+id/textview_likes"
        app:layout_constraintEnd_toEndOf="@+id/textview_likes"
        app:layout_constraintStart_toStartOf="@+id/textview_likes"
        app:tint="?attr/colorOnSurfaceInverse" />

    <TextView
        style="?attr/textAppearanceHeadlineMedium"
        android:id="@+id/textview_recipe_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_main"
        tools:text="Butter Paneer Masala" />

    <ImageView
        android:importantForAccessibility="no"
        android:id="@+id/imageview_vegetarian_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintEnd_toStartOf="@+id/textview_vegetarian_check"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_recipe_title"
        app:tint="?attr/colorOnSurface" />

    <TextView
        style="?attr/textAppearanceBodyMedium"
        android:id="@+id/textview_vegetarian_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_vegetarian_check"
        app:layout_constraintEnd_toStartOf="@+id/imageview_gluten_free"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageview_vegetarian_check"
        app:layout_constraintTop_toTopOf="@+id/imageview_vegetarian_check" />

    <ImageView
        android:importantForAccessibility="no"
        android:id="@+id/imageview_vegan_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/imageview_vegetarian_check"
        app:layout_constraintTop_toBottomOf="@+id/imageview_vegetarian_check"
        app:tint="?attr/colorOnSurface" />

    <TextView
        style="?attr/textAppearanceBodyMedium"
        android:id="@+id/textview_vegan_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_vegan_check"
        app:layout_constraintStart_toEndOf="@+id/imageview_vegan_check"
        app:layout_constraintTop_toTopOf="@+id/imageview_vegan_check" />

    <ImageView
        android:importantForAccessibility="no"

        android:id="@+id/imageview_gluten_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintEnd_toStartOf="@+id/textview_gluten_free"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textview_vegetarian_check"
        app:layout_constraintTop_toTopOf="@+id/imageview_vegetarian_check"
        app:tint="?attr/colorOnSurface" />

    <TextView
        style="?attr/textAppearanceBodyMedium"
        android:id="@+id/textview_gluten_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_gluten_free"
        app:layout_constraintEnd_toStartOf="@+id/imageview_healthy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageview_gluten_free"
        app:layout_constraintTop_toTopOf="@+id/imageview_gluten_free" />

    <ImageView
        android:importantForAccessibility="no"

        android:id="@+id/imageview_dairy_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/imageview_gluten_free"
        app:layout_constraintTop_toBottomOf="@+id/imageview_gluten_free"
        app:tint="?attr/colorOnSurface" />

    <TextView
        style="?attr/textAppearanceBodyMedium"
        android:id="@+id/textview_dairy_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_dairy_free"
        app:layout_constraintStart_toEndOf="@+id/imageview_dairy_free"
        app:layout_constraintTop_toTopOf="@+id/imageview_dairy_free" />

    <ImageView
        android:importantForAccessibility="no"
        android:id="@+id/imageview_healthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintEnd_toStartOf="@+id/textview_healthy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textview_gluten_free"
        app:layout_constraintTop_toTopOf="@+id/imageview_gluten_free"
        app:tint="?attr/colorOnSurface" />

    <TextView
        style="?attr/textAppearanceBodyMedium"
        android:id="@+id/textview_healthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_healthy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageview_healthy"
        app:layout_constraintTop_toTopOf="@+id/imageview_healthy" />

    <ImageView
        android:importantForAccessibility="no"
        android:id="@+id/imageview_cheap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/imageview_healthy"
        app:layout_constraintTop_toBottomOf="@+id/imageview_healthy"
        app:tint="?attr/colorOnSurface" />

    <TextView
        style="?attr/textAppearanceBodyMedium"
        android:id="@+id/textview_cheap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_cheap"
        app:layout_constraintStart_toEndOf="@+id/imageview_cheap"
        app:layout_constraintTop_toTopOf="@+id/imageview_cheap" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_vegan_check">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?attr/textAppearanceBodyMedium"
                android:textSize="18sp"
                android:id="@+id/textview_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Recipe Summary" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>